--- a/src/main/resources/static/Башкы-бет.css
+++ b/src/main/resources/static/Башкы-бет.css
@@ -411,7 +411,7 @@
 }
 
 .u-section-4 .u-image-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/pexels-photo-5012108.jpeg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/1123078.jpg");
   background-position: 50% 50%;
 }
 
@@ -450,7 +450,7 @@
 }
 
 .u-section-4 .u-image-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/pexels-photo-3206143.jpeg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/1123078.jpg");
   background-position: 50% 50%;
 }
 
