--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -267,7 +267,7 @@
     <div class="u-expanded-width u-list u-list-1">
         <div class="u-repeater u-repeater-1">
             <div class="u-align-center u-container-style u-image u-list-item u-repeater-item u-shading u-image-1"
-                 data-image-width="720" data-image-height="1080">
+                 data-image-width="720" data-image-height="1080">1123078
                 <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-1">
                     <h6 class="u-align-center u-text u-text-default u-text-1"> Талант ТЕНТИМИШОВ</h6>
                     <p class="u-align-center u-text u-text-default u-text-palette-3-base u-text-2">мудур</p>
